Changes in Shorewall 4.4.0-RC2

1)  Fix capabilities file with Shorewall6.

2)  Allow Shorewall6 to recognize TC, IP and IPSET

3)  Make 'any' a reserved zone name.

Changes in Shorewall 4.4.0-RC1

1)  Delete duplicate Git macro.

2)  Fix routing when no providers.

3)  Add 'any' as a SOURCE/DEST in rules.

4)  Fix NONAT on child zone.

5)  Fix rpm -U from earlier versions

6)  Generate error on 'status' by non-root.

7)  Get rid of prog.functions and prog.functions6

Changes in Shorewall 4.4.0-Beta4

1)  Add more macros.

2)  Correct broadcast address detection

3) Fix 'show dynamic'

4) Fix BGP and OSFP macros.

5) Change DISABLE_IPV6 default and use 'correct' ip6tables.

Changes in Shorewall 4.4.0-Beta3

1)  Add new macros.

2)  Work around mis-configured interfaces.

3)  Fix 'show dynamic'.

4)  Check for xt_LOG.

5)  Fix 'findgw'

Changes in Shorewall 4.4.0-Beta2

1)  The 'find_first_interface_address()' and
    'find_first_interface_address_if_any()' functions have been restored to
    lib.base.

2)  Integerize r2q before inserting it into 'tc qdisc add root'
    command.

3)  Remove '-h' from the help text for install.sh in Shorewall and
    Shorewall6.

4)  Delete the 'continue' file from the Shorewall package.

5)  Add 'upnpclient' interface option.

6)  Fix handling of optional interfaces.

7)  Add 'iptrace' and 'noiptrace' command.

8)  Add 'USER/GROUP' column to masq file.

9)  Added lib.private.

Changes in Shorewall 4.4.0-Beta1

1)  Correct typo in Shorewall6 two-interface sample shorewall.conf.

2)  Fix TOS mnemonic handling in /etc/shorewall/tcfilters.

Changes in Shorewall 4.3.12

1) Eliminate 'large quantum' warnings.

2) Add HFSC support.

3) Delete support for ipset binding. Jozsef has removed the capability
   from ipset.

4) Add TOS and LENGTH columns to tcfilters file.

5) Fix 'reset' command.

6) Fix 'findgw'.

7) Remove 'norfc1918' support.

Changes in Shorewall 4.3.11

1) Reduce the number of arguments passed in may cases.
