@@ -121,6 +121,9 @@ Shorewall 4.4.0 RC2
 3)  'any' is now a reserved name. In RC1, 'any' could be defined as the
     name of a zone.
 
+4)  Previously, an IPSEC zone could be defined as a sub-zone of a
+    non-IPSEC zone. This invalid definition is now flagged with an error.
+
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
