@@ -6,6 +6,8 @@ Changes in Shorewall 4.4.0-RC2
 
 3)  Make 'any' a reserved zone name.
 
+4)  Issue a warning if an ipsec zone is nested in a non-ipsec zone.
+
 Changes in Shorewall 4.4.0-RC1
 
 1)  Delete duplicate Git macro.
